--- a/_posts/2021-09-28-Alaska.md
+++ b/_posts/2021-09-28-Alaska.md
@@ -22,6 +22,10 @@ categories: 美国 游记
 
 ![路线图](/images/Alaska/Map.png)
 
+一句话总结这次旅行，
+
+> 阿拉斯加不愧是the last frontier，比远方更远，比北方更北，从太平洋边到北冰洋畔，从温带绿叶林到极地苔原，真是世之奇伟瑰丽，常在险远。
+
 ### 安克雷奇 and FairBanks
 
 我把安克雷奇和 FairBanks 放到一起写，因为这两个都是阿拉斯加仅有的几个大城市了。他们的市容市貌其实都差不多，都是典型的高纬度北方现代化城市。特别是安克雷奇真实非常现代，购物，吃饭都非常方便。
@@ -35,6 +39,26 @@ categories: 美国 游记
 ![City3](/images/Alaska/city3.JPG)
 
 ### 北极圈
+
+这次旅行的重头戏就是去北极圈内看北冰洋。主要参考了这篇微信的介绍 [道尔顿公路：远征北冰洋 | 世界最危险公路自驾指南【2017新版】](https://mp.weixin.qq.com/s/g4YX_fOguvNmUpR1jfRsTQ)，Lyra 和 Eric 真不愧是华人旅行公众号的头部，这篇图文并茂，翔实可靠，强烈推荐，我就说说自己体会比较深的几个点，不狗尾续貂了。
+
+这次的北极圈之内其实大多数情况下应该是一无所有的，毕竟除了军事单位一般很少有人愿意在北极圈内生活，更谈不上修筑公路了。但是，凡事无绝对，随着阿拉斯加石油的发现，为了配套输油管线和运输原料，道尔顿公路（Dalton Highway）因此而生。所以，阿拉斯加北极圈内的公路旅行不是常见的那种美国 Road Trip, 在公路的两头，有着工业文明的伟力 (FairBanks，阿拉斯加第二大的城市 和 Prudhoe Bay 几千石油工人和配套设施城市)，但是整个公路沿线往往前后十多公里才能见到一个人。就在这种奇特的对比中，跨阿拉斯加输油管线的管道（Trans-Alaska Pipeline System）在公路两边蜿蜒向前，随着地形不断变化，让人不得不感叹大自然的神奇和人类文明的力量。
+
+![Pipe](/images/Alaska/Pipe1.jpg)
+
+![Pipe](/images/Alaska/Pipe2.jpg)
+
+![Pipe](/images/Alaska/Pipe3.jpg)
+
+所以回来之后我发朋友圈的时候专门提到这条输油管线，在四野茫茫的时候，这条管线实在是让人印象深刻。
+
+当时发的朋友圈如下，
+
+> 特别是北极圈内，极目远眺，枯黄的苔原铺陈到天边，寒风萧瑟，舟楫路穷，但是跨阿拉斯加输油管道依然在努力地延伸和我们的车平行前进，人力的有限与无穷如此怪异又和谐地统一在一起：
+
+> 百代过客渺沧海一粟；光阴逆旅寄蜉蝣天地；
+
+> 风飙道阻知春秋迭代而楚歌非取乐之方，高桥羁旅觉日暮途远而鲁酒无忘忧之用。
 
 ### 太平洋
 
