--- a/_posts/2021-09-28-Alaska.md
+++ b/_posts/2021-09-28-Alaska.md
@@ -40,7 +40,7 @@ categories: 美国 游记
 
 ### 北极圈
 
-这次旅行的重头戏就是去北极圈内看北冰洋。主要参考了这篇微信的介绍 [道尔顿公路：远征北冰洋 | 世界最危险公路自驾指南【2017新版】](https://mp.weixin.qq.com/s/g4YX_fOguvNmUpR1jfRsTQ)，Lyra 和 Eric 真不愧是华人旅行公众号的头部，这篇图文并茂，翔实可靠，强烈推荐，我就说说自己体会比较深的几个点，不狗尾续貂了。
+这次旅行的重头戏就是去北极圈内看北冰洋。主要参考了这篇微信的介绍 [道尔顿公路远征北冰洋世界最危险公路自驾指南2017新版](https://mp.weixin.qq.com/s/g4YX_fOguvNmUpR1jfRsTQ)，Lyra 和 Eric 真不愧是华人旅行公众号的头部，这篇图文并茂，翔实可靠，强烈推荐，我就说说自己体会比较深的几个点，不狗尾续貂了。
 
 这次的北极圈之内其实大多数情况下应该是一无所有的，毕竟除了军事单位一般很少有人愿意在北极圈内生活，更谈不上修筑公路了。但是，凡事无绝对，随着阿拉斯加石油的发现，为了配套输油管线和运输原料，道尔顿公路（Dalton Highway）因此而生。所以，阿拉斯加北极圈内的公路旅行不是常见的那种美国 Road Trip, 在公路的两头，有着工业文明的伟力 (FairBanks，阿拉斯加第二大的城市 和 Prudhoe Bay 几千石油工人和配套设施城市)，但是整个公路沿线往往前后十多公里才能见到一个人。就在这种奇特的对比中，跨阿拉斯加输油管线的管道（Trans-Alaska Pipeline System）在公路两边蜿蜒向前，随着地形不断变化，让人不得不感叹大自然的神奇和人类文明的力量。
 
@@ -59,6 +59,12 @@ categories: 美国 游记
 > 百代过客渺沧海一粟；光阴逆旅寄蜉蝣天地；
 
 > 风飙道阻知春秋迭代而楚歌非取乐之方，高桥羁旅觉日暮途远而鲁酒无忘忧之用。
+
+当然，因为主要是作为运输道路设计的，加上经常有载重卡车使用，这条路的路况实在是不敢恭维，比如我们车的路况如下，
+
+![Car1](/images/Alaska/car1.jpg)
+
+![Car2](/images/Alaska/car2.jpg)
 
 ### 太平洋
 
