--- a/_posts/2021-09-28-Alaska.md
+++ b/_posts/2021-09-28-Alaska.md
@@ -66,6 +66,28 @@ categories: 美国 游记
 
 ![Car2](/images/Alaska/car2.jpg)
 
+当时这些辛苦都是值得的，一路上真是符合王安石说的，“世之奇伟瑰丽，常在险远”，翻译翻译，就是人少的地方一般景色不错。放几张风景图，
+
+![scenery1](/images/Alaska/scenery1.jpg)
+
+![scenery2](/images/Alaska/scenery2.jpg)
+
+![scenery3](/images/Alaska/scenery3.jpg)
+
+![scenery4](/images/Alaska/scenery4.jpg)
+
+![scenery5](/images/Alaska/scenery5.jpg)
+
+![scenery6](/images/Alaska/scenery6.jpg)
+
+![scenery7](/images/Alaska/scenery7.jpg)
+
+![scenery8](/images/Alaska/scenery8.jpg)
+
+![scenery9](/images/Alaska/scenery9.jpg)
+
+顺带一说，阿拉斯加的北极圈真是初高中地理的绝佳教科书，完整展示了随着纬度变化，从阔叶林到针叶林，再到草原，以及极地苔原的地貌变化。同时因为，地形起伏，沿途还要经过多做终年积雪的雪山，雪山的融雪又形成了小溪小湖，充分体现了纬度和海拔的影响。
+
 ### 太平洋
 
 ### 感受
