--- a/_posts/2021-09-28-Alaska.md
+++ b/_posts/2021-09-28-Alaska.md
@@ -12,7 +12,7 @@ categories: 美国 游记
 
 ## 阿拉斯加概况
 
-阿拉斯加是美国远离本土的一个州，被誉为最后的边疆 (The Last Frontier)。阿拉斯基西边和俄罗斯隔着白令海峡，东边和加拿大接壤，北边深入北极圈到达北冰洋，南边紧邻太平洋。阿拉斯加是美国面积最大的州，比排名第二的德州两倍面积还大，比较大的城市有安克雷奇，Fairbanks, 这次我都有到。
+阿拉斯加是美国远离本土的一个州，被誉为最后的边疆 (The Last Frontier)。阿拉斯基西边和俄罗斯隔着白令海峡，东边和加拿大接壤，北边深入北极圈到达北冰洋，南边紧邻太平洋。阿拉斯加是美国面积最大的州，比排名第二的德州两倍面积还大，比较大的城市有安克雷奇（Anchorage）与费尔班克斯（Fairbanks）, 这次我都有到。
 
 美国人在中小学都要学的历史里面，关于阿拉斯加的最有名的就是所谓的阿拉斯加购地案(Alaska Purchase)。当时的观点大都倾向于这是一个愚蠢的交易，因为交易由时任国务卿苏厄德 (Seward) 主导，这个交易又被嘲笑为 “苏厄德的愚蠢”（Seward's Folly)。当然现在看，720万美元买阿拉斯加，平均大约每英亩2美分（每平方千米4.74美元）实在是太赚了，特别是阿拉斯加发现石油之后，更不要说，阿拉斯加的地缘优势。比如，今年的中美对话就选在阿克雷奇，毕竟这是中国大陆和美国本土的中间位置，双方都方便。
 
@@ -26,9 +26,9 @@ categories: 美国 游记
 
 > 阿拉斯加不愧是the last frontier，比远方更远，比北方更北，从太平洋边到北冰洋畔，从温带绿叶林到极地苔原，真是世之奇伟瑰丽，常在险远。
 
-### 安克雷奇 and FairBanks
+### 安克雷奇（Anchorage）与 费尔班克斯（Fairbanks）
 
-我把安克雷奇和 FairBanks 放到一起写，因为这两个都是阿拉斯加仅有的几个大城市了。他们的市容市貌其实都差不多，都是典型的高纬度北方现代化城市。特别是安克雷奇真实非常现代，购物，吃饭都非常方便。
+我把安克雷奇和 FairBanks 放到一起写，因为这两个都是阿拉斯加仅有的几个大城市了。他们的市容市貌其实都差不多，都是典型的高纬度北方现代化城市。特别是安克雷奇（Anchorage）真实非常现代，购物，吃饭都非常方便。
 
 展示几张市容图吧。
 
@@ -88,9 +88,36 @@ categories: 美国 游记
 
 顺带一说，阿拉斯加的北极圈真是初高中地理的绝佳教科书，完整展示了随着纬度变化，从阔叶林到针叶林，再到草原，以及极地苔原的地貌变化。同时因为，地形起伏，沿途还要经过多做终年积雪的雪山，雪山的融雪又形成了小溪小湖，充分体现了纬度和海拔的影响。
 
+当然，路上经过 Kenai 山也是值得仔细拍照的，这座山被当地人认为是圣山。
+
+![Kenai1](/images/Alaska/kenai.jpg)
+
 ### 太平洋
 
-### 感受
+从北极圈回到 Fairbanks 后，掉头南下，向着太平洋而去。主要是去 Kenai Fjords National Park（基奈峡湾国家公园）看海洋动物和冰山。关于 Kenai Fjords National Park（基奈峡湾国家公园）更多的资料可以参考这个公众号 [阿拉斯加Kenai Fjords，两栖国家公园：一半是海水，一半是雪山](https://mp.weixin.qq.com/s?__biz=MzI2OTAyNTUwMg==&mid=2651253711&idx=1&sn=42c6443334b2ea09987c3e40d5c6db34&scene=21#wechat_redirect)。
+
+单纯从视觉效果上看，太平洋沿岸比北冰洋沿岸更加赏心悦目，毕竟满目苍翠比光秃秃的北冰洋畔好很多。从 安克雷奇（Anchorage）到 Seward 的公路就是沿着太平洋的岸边修筑的，非常漂亮。
+
+![pacific road](/images/Alaska/pacific1.jpg)
+
+![pacific road](/images/Alaska/pacific2.jpg)
+
+![pacific road](/images/Alaska/pacific3.jpg)
+
+这次出海海试看到了虎鲸和冰川，放上几张照片。
+
+![sea0](/images/Alaska/sea0.jpg)
+
+![sea1](/images/Alaska/sea1.jpg)
+
+![sea2](/images/Alaska/sea2.JPEG)
+
+![sea3](/images/Alaska/sea3.JPEG)
+
+![sea4](/images/Alaska/sea4.jpg)
+
+![sea5](/images/Alaska/sea5.jpg)
 
 ## 总结
 
+拖拖拉拉，在完成 Thesis defense 的今天终于写完了这篇游记，感谢 Ph.D. 导师，感谢父母，感谢一路走来的所有支持和帮助。这次阿拉斯加之旅就算做提前给自己的毕业旅行了。
