reduce size of images and updates

--- a/_posts/2021-09-28-Alaska.md
+++ b/_posts/2021-09-28-Alaska.md
@@ -118,6 +118,55 @@ categories: 美国 游记
 
 ![sea5](/images/Alaska/sea5.jpg)
 
+
+## Some Fun Facts
+
+### 专门租车和对讲机
+
+北京圈内的路况有多差，这是我第一次在美国租车的时候需要重新租车的，而且每个车都有无线电对讲机，如下图所示。
+
+![Radio](/images/Alaska/radio.JPG)
+
+这个主要是因为，路上有很多那种坡度非常陡峭的路，同时路况比较差而且路窄，往往需要借道对向车道。如果是平地路还好，但是如果是爬坡路，对向车道的车根本看不到，所以往往爬坡的时候需要对着无线电对讲机不停说话，通知避让。
+
+这也是为什么需要去指定的专门租车公司租车的原因，虽然贵了一点，但是确实是车功率更大，适应各种恶劣路况，加装对讲机更加安全。
+
+### Coldfoot Camp 
+
+因为路况太差，所以沿途都是限速的，最高 50 mph。同时一路上只有一个叫 Coldfoot 的露营地。这里原来是淘金者的露营地，虽然条件艰苦，但是已经是一路上很好的宿营地了。给大家看看营地的情况。
+
+![Coldfoot Camp](/images/Alaska/coldfoot1.JPG)
+
+![Coldfoot Camp](/images/Alaska/coldfoot2.JPG)
+
+![Coldfoot Camp](/images/Alaska/coldfoot3.JPG)
+
+这几个营地更加重要的地方在于加油，因为一路上人烟稀少，Coldfoot Camp 和下面说的 Yukon River Camp 所以只有这两处可以加油，所以一定不能错过。一半也都会在几个营地停留，即使不住宿也吃吃东西，喝喝咖啡，休整一下。
+
+![Gas](/images/Alaska/gas1.JPG)
+
+### Yukon River Camp
+
+Yukon River Camp 是路上一个景色非常美的加油地，这里也给大家看看，都是需要主要的路标，可以加油。
+
+![Yukon River Camp](/images/Alaska/yukon1.JPG)
+
+![Yukon River Camp](/images/Alaska/yukon2.JPG)
+
+![Yukon River Camp](/images/Alaska/yukon3.JPG)
+
+![Yukon River Camp](/images/Alaska/yukon4.JPG)
+
+### 车暖系统
+
+这次北极圈内看到了一个奇怪的东西，就是在北极圈的车前面都有一个空着的插头挂着。这个其实就是在冬天给车发动机和电池保温的。因为北极圈内经常有极低温，所以冬天都是开车出去办事，如果时间不长那么基本不会停止发动机。但是如果长时间停留怎么办呢？
+
+所以每个车都有一个插头，停车处都有供暖的系统连着，帮车集中保温，如下图所示。
+
+![warm](/images/Alaska/warm1.JPG)
+
+![warm](/images/Alaska/warm2.JPG)
+
 ## 总结
 
 拖拖拉拉，在完成 Thesis defense 的今天终于写完了这篇游记，感谢 Ph.D. 导师，感谢父母，感谢一路走来的所有支持和帮助。这次阿拉斯加之旅就算做提前给自己的毕业旅行了。
