--- a/_posts/2015-04-26-crack3k.markdown
+++ b/_posts/2015-04-26-crack3k.markdown
@@ -43,9 +43,9 @@ categories: GRE
 
 展示一下，来自再要你命3000的微博，都是微臣上课的同学提供的默写照片，版权属于他们。
 
-![样例1](https://github.com/iphyer/Crack3kGREWords/blob/master/ScreenShot/example1.jpg?raw=true)
+![样例1](/images/crack3k/example1.jpg)
 
-![样例2](https://github.com/iphyer/Crack3kGREWords/blob/master/ScreenShot/example1.jpg?raw=true)
+![样例2](/images/crack3k/example2.jpg)
 
 因为我自己的默写成绩很惨就不单独列出来了。不过我的同桌倒是每次都能够得到接近满分的成绩，非常佩服！
 
