--- a/_posts/2021-12-31-summary2021.md
+++ b/_posts/2021-12-31-summary2021.md
@@ -12,7 +12,7 @@ categories: 生活
 
 ## 2021 流水账
 
-这儿先写个 2021 的流水账吧，总结下各个月的重要事项，对着日历回顾才发现自己的 2021 真是完成了很多事情呢，这一年真是砥砺前行的一年，也是收获颇丰的一年，也是不断发现问题，解决问题的一年。总结这部分的时候，我翻开了自己的谷歌日历，对照着看看自己的每天的日程表总结。
+这儿先写个 2021 的流水账吧，总结下各个月的重要事项，对着日历回顾才发现自己的 2021 真是完成了很多事情呢，总结这部分的时候，我翻开了自己的谷歌日历，对照着看看自己的每天的日程表总结。
 
 每个时间，如果没有特别大的变动我就合并到一起，如果有重大事件我就详细写出，个人主观标准。看着过去的一年真是千言万语涌上心头，往事历历如在昨日。
 
