--- a/_posts/2021-12-31-MySummaryOF2021.md
+++ b/_posts/2021-12-31-MySummaryOF2021.md
@@ -28,7 +28,7 @@ categories: 生活
 
 (2) 回复论文的审稿意见和导师对着Reviewer的Comments写回复。
 
-写回复意见的时候，经常会陷入低效率的怪圈，有时候感觉审稿人是 SB，这什么Comments??? 有时候觉得自己是 SB，这么Simple and Plain 的结果真是我写的？？？
+> 写回复意见的时候，经常会陷入低效率的怪圈，有时候感觉审稿人是 SB，这什么Comments??? 有时候觉得自己是 SB，这么Simple and Plain 的结果真是我写的？？？
 
 > 其实你不需要想太多，写就完了，情绪波动真的是科研的大忌。我们要做没有感情的论文发表机器！
 
