summary 2021 correct typos

--- a/_posts/2021-12-31-MySummaryOF2021.md
+++ b/_posts/2021-12-31-MySummaryOF2021.md
@@ -8,7 +8,7 @@ categories: 生活
 
 一年将尽夜，万里未归人。2022 就要来了，总结下自己的 2021，做好 2022 的规划，吸取教训，总结经验，更好地面向未来。
 
-开年的时候，不断面试，结果今天(2022.01.06)打完加强针才找到时间，静下心来总结自己的过去一年。
+2022 开年的时候，不断面试，结果今天(2022.01.06)打完加强针才找到时间，静下心来总结自己的过去一年。
 
 <!--more-->
 
@@ -26,7 +26,7 @@ categories: 生活
 
 > 其实效率可以更高的，我当时回复审稿意见，心力交瘁，所以论文答辩完坚决毕业。很多时候，科研看着活不多，挺简单，但是真是对人的一种折磨，特别是你其实完全掌握但是还要慢慢写出来告诉别人的时候，很多时候我们可以用几句话总结完的内容，必须写到20页论文。
 
-(2) 回复论文的审稿意见和导师对着Reviewer的Comments写回复。
+(2) 回复论文的审稿意见和导师对着 Reviewer 的 Comments 写回复。
 
 > 写回复意见的时候，经常会陷入低效率的怪圈，有时候感觉审稿人是 SB，这什么Comments??? 有时候觉得自己是 SB，这么Simple and Plain 的结果真是我写的？？？
 
@@ -54,7 +54,7 @@ categories: 生活
 
 (1) 实习，开始第一次认识公司的科研如何做，如何规范代码，当然也发现没办法拿 return offer, 开始准备秋招.
 
-(2) 面试了 USBank, Amazon, Capital One, Failed，这个时候刷题还不够，确实菜鸡，同时对面试又畏难情绪，其实大可不必。虽然人不能没有情绪但是很多时候很多事情就是看你如何更好地控制自己的情绪波动。
+(2) 面试了 USBank, Amazon, Capital One, Failed，这个时候刷题还不够，确实菜鸡，同时对面试有畏难情绪，其实大可不必。虽然人不可能没有情绪，但是很多时候，很多事情，就是看你如何更好地控制自己的情绪波动。
 
 > 不以物喜，不以己悲!
 
@@ -64,7 +64,7 @@ categories: 生活
 
 (1) 和同学去阿拉斯加旅游，当时手头没有 offer，但是考虑再三，就当是毕业旅游了，详见 [USA印象14: Alaska 游记](https://iphyer.github.io/blog/2021/11/15/Alaska/)
 
-(2) 写完最后一个科研论文，发给老板修改，其实老板一直到 11 月才返回来。对于还在读博士的同学，把这个 Timeline 都记住，导师很忙的，其实 2个月算快了。
+(2) 写完最后一个科研论文，发给老板修改，其实老板一直到 11 月才返回来。对于还在读博士的同学，把这个 Timeline 都记住，导师很忙的，其实 2 个月算快了。
 
 ### 2021.10
 
@@ -82,7 +82,7 @@ categories: 生活
 
 (1) 2021.11.15 Thesis Defense，感谢各位老师的支持，顺利答辩完。
 
-(2) 准备毕业，其实这个时候自己有点犹豫，因为答辩耽误了时间，所以考虑是不是保险下，多留一个学期，但是参考我在上半年的经验和自己的年纪，还是赶紧毕业吧。自己深入思考过收益和风险，决定冒险，如果找不到工作我就回去么。
+(2) 准备毕业，其实这个时候自己有点犹豫，因为答辩耽误了时间，所以考虑是不是保险下，多留一个学期，但是参考我在上半年的经验和自己的年纪，还是赶紧毕业吧。自己深入思考过收益和风险，决定冒险，如果找不到工作我就回去。
 
 (3) 开始疯狂投 LinkedIn 的 Jobs，基本每天都投，任何岗位, SDE, MLE, DS 都投。
 
@@ -112,11 +112,11 @@ categories: 生活
 
 ### 找工作
 
-1. 不停投简历，如果你没有投出 **1000+** 的简历，不要说自己找不到工作，只要你敢投，就有公司可能要你，你要是放弃了不投简历，那就彻底结束了。我估计我找工作的时候，投了1200个简历。LinkedIn这些网站都可以自动投出去，投就行了。
-2. 一定要找你想申请的内行人给你改简历，隔行如隔山，不同行业对简历有不同要求，我找了自己的本科同学帮忙改简历，不断修改，可能最后经常用的简历已经是第 20 稿了。必须是内行人而不是学校就业中心的老师或者外行人，他们的话，改改语法还行，别的别指望太多。
+1. 不停投简历，如果你没有投出 **1000+** 的简历，不要说自己找不到工作，只要你敢投，就有公司可能要你，你要是放弃了不投简历，那就彻底结束了。我估计我找工作的时候，投了 **1200** 个简历。LinkedIn这些网站都可以自动投出去，投就行了。
+2. 一定要找你想申请的行业的内行人给你改简历，隔行如隔山，不同行业对简历有不同要求，我找了自己的本科同学帮忙改简历，不断修改，可能最后经常用的简历已经是第 20 稿了。必须是内行人而不是学校就业中心的老师或者外行人，他们的话，改改语法还行，别的别指望太多。
 3. 可以从小公司练手开始，但是如果时间紧迫，那也只能直接上了，毕竟时间不等人。
 4. 拿到 12.30 的 offer 后，最近开始面试都是 FB, Google, Amazon 这个 level 的公司，毕竟有了保底 offer，心中不慌，可以冲刺这些大公司了。
-5. 平心而论，如果 NG 又选择还是去大公司吧，这些大公司给人的培养和提高是小公司无法匹敌的，而且作为 F1 Student 你的各种工作签证等等，格外艰难而且不太便宜需要专门的 HR 和律师，这条要求就把大堆小公司劝退了。所以珍惜这些大公司，因为他们是你最好的上岸选择，虽然不是唯一选择。
+5. 平心而论，如果 NG 能选择还是去大公司吧，这些大公司给人的培养和提高是小公司无法匹敌的，而且作为 F1 Student 你的各种工作签证等等，格外艰难而且不太便宜需要专门的 HR 和律师，这条要求就把大堆小公司劝退了。所以珍惜这些大公司，因为他们是你最好的上岸选择，虽然不是唯一选择。
 6. OPT 的申请，越早越好，OPT 可以没有 Job Offer 申请，所以咨询自己学校的 International Student Office，然后快点申请吧！
 
 
