Mid Travel+Q2 Summary+MNoving22

--- a/_posts/2017-08-19-1year.markdown
+++ b/_posts/2017-08-19-1year.markdown
@@ -69,9 +69,9 @@ J 教授是一个很好的美国大婶，非常友善，不过她也开宗明义
 
 1.15 号开学，认真上课了。
 
-当然很快，1.28号是举国欢庆的春节，也是和同学一起过了一个团员的春节，主要是大家包饺子。正好这个节日在美国时间周五，正好和同学一起等到了春节联欢晚会，第二个不在家的春节。上一次还要追溯到大二在北京上新东方的时候。时间飞快，很快都要第二个春节了。
+当然很快，1.28号是举国欢庆的春节，也是和同学一起过了一个团圆的春节，主要是大家包饺子。正好这个节日在美国时间周五，正好和同学一起等到了春节联欢晚会，第二个不在家的春节。上一次还要追溯到大二在北京上新东方的时候。时间飞快，很快都要第二个春节了。
 
-##2017.02
+## 2017.02
 
 这个学期尝试选了一门CS302的老美基础课。其实主要是讲解Java入门的基础知识，同时是一门大课，课上有将近 300 个人一起上课。
 
@@ -119,6 +119,6 @@ J 教授是一个很好的美国大婶，非常友善，不过她也开宗明义
 
 希望在接下来的一个学期能转入计算机保证硕士。主要是考虑到学术问题，还有就是各种不可控制因素。比如导师恶心这些情况，来美一年，可以说见到听到太多恶心导师的例子了。还是打铁自身硬吧！
 
-#未来
+# 未来
 
 拿到CS硕士，争取自己养活自己！
