--- a/_posts/2017-09-10-week1ta.markdown
+++ b/_posts/2017-09-10-week1ta.markdown
@@ -15,7 +15,7 @@ categories: 学习
 
 # 美国的本科教育
 
-美国的高中，特别是公立高中其实没有统一的大纲和要求，这就导致高中毕业生的水平参差不齐。所以相应的大学班级就有对应的区别，具体来说就是chem103,104和109。数字越大，节奏越快，要求也越高。我教的103基本上就是高中啥化学都没学也可以的学生也可以上。事实上，班上就有从历史来的学生，所以相应的教学就要偏向基础和循序渐进。
+美国的高中，特别是公立高中其实没有统一的大纲和要求，这就导致高中毕业生的水平参差不齐。所以相应的大学班级就有对应的区别，具体来说就是chem103,104和109。数字越大，节奏越快，要求也越高。我教的 103 基本上就是给高中啥化学都没学的学生选择的入门课程。事实上，班上就有从历史系来的学生，所以相应的教学就要偏向基础和循序渐进。
 
 ## 教学安排
 
