--- a/_posts/2020-08-05-NewHome.markdown
+++ b/_posts/2020-08-05-NewHome.markdown
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: "搬家记录"
+title: "搬家记录2"
 date: 2020-08-05 16:49
 comments: true
 categories: 科研
 ---
 
-终于完全安顿下来了，一切都很顺利，今天把电费，网费的 autopay 都 setup 起来了，感觉还是记录下。上次搬家记录的地址更改，[麦迪逊搬家地址更新总结](https://iphyer.github.io/blog/2018/08/07/address/)，感觉这次还是很有帮助的。
+终于完全安顿下来了，一切都很顺利，今天把电费，网费的 autopay 都 setup 起来了，感觉还是记录下。上次搬家记录的地址更改，[搬家记录1：麦迪逊搬家地址更新总结](https://iphyer.github.io/blog/2018/08/07/address/)，感觉这次还是很有帮助的。
 
 <!--more-->
 
@@ -18,7 +18,7 @@ categories: 科研
 
 ## 更改地址注意
 
-上次的搬家总结其实还是很全面的，[麦迪逊搬家地址更新总结](https://iphyer.github.io/blog/2018/08/07/address/)，可能这次多出来的部分就是 **车险地址** 的更新，还是可以在网上更新。
+上次的搬家总结其实还是很全面的，[搬家记录1：麦迪逊搬家地址更新总结](https://iphyer.github.io/blog/2018/08/07/address/)，可能这次多出来的部分就是 **车险地址** 的更新，还是可以在网上更新。
 
 当然注意下车险是和地址有密切关系的，比如你在人多车多的纽约和地广人稀的中部是完全不同的保险费率。当然还是需要更新地址，这个也是一个提醒如果保险费率变化不需要太惊讶。
 
