--- a/_posts/2022-04-10-Summary2022Q1.md
+++ b/_posts/2022-04-10-Summary2022Q1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "2022 Spring 总结"
+title: "2022 Q1 总结"
 date: 2022-04-10 21:54
 comments: true
 categories: 生活 学习
@@ -10,7 +10,7 @@ categories: 生活 学习
 
 <!--more-->
 
-## 总结
+## 2022 Q1 总结
 
 * 3 Offer, 6 Fail
 * EAD
