Mid Travel+Q2 Summary+MNoving22 v2

--- a/_posts/2022-07-02-Summary2022Q2.md
+++ b/_posts/2022-07-02-Summary2022Q2.md
@@ -49,6 +49,8 @@ Check List:
 - [x] Tax Return: 04/10/2022
 - [x] House Renting
 - [x] Moving to TX
+- [x] A's onboarding
+- [ ] Ingestion Pipeline
 - [ ] XPCS: Focous!
 - [ ] LeetCode: 543 -> 583 -> 600
 - [ ] Wegiths: 5 lbs -> 12 lbs
