Mid Travel+Q2 Summary+MNoving22 v2 - list formation

--- a/_posts/2022-07-02-Moving22.md
+++ b/_posts/2022-07-02-Moving22.md
@@ -19,28 +19,28 @@ categories: 生活
 其实搬家最重要的就是需要记得所有全部需要做的事情的 List，这里总结下我的，基本都是自己确认过有效且有用的。
 
 1. 美国移民局
-  1. OPT
+  a. OPT
     1. Service Portal
-  2. AR-11, [https://www.uscis.gov/addresschange](https://www.uscis.gov/addresschange)
-  3. Report to ISS
+  b. AR-11, [https://www.uscis.gov/addresschange](https://www.uscis.gov/addresschange)
+  c. Report to ISS
 2. Company Personal Info
   1. PeopleProtal Updates Mail and Home addresses and below updates automatically, e.g. &quot;Address canes will e sent to benefits and Payroll within 48 hours of saving the change in PeoplePortal&quot;
-    1. Tax
-    2. 401k
-    3. Stock Options
-    4. Med Insurance
-      1. General
-      2. Dental
-      3. Vision
+    a. Tax
+    b. 401k
+    c. Stock Options
+    d. Med Insurance
+      (1). General
+      (2). Dental
+      (3). Vision
 3. Car Insurance
-  1. Address Updates
-  2. Re-quote
+  a. Address Updates
+  b. Re-quote
 4. DMV
 5. I-Pass
-  1. Removal
+  a. Removal
 6. Texas Toll
-  1. TxTag Application
-  2. Check toll fee mail
+  a. TxTag Application
+  b. Check toll fee mail
 7. Your past employer will need your address to send W2 if there is any.
 8. UW-Madison Info
   1. Student Center Profile, You will lose access to the MyUW Portal 24 months after your appointment end date, [https://kb.wisc.edu/helpdesk/page.php?id=6856&amp;redirect=1](https://kb.wisc.edu/helpdesk/page.php?id=6856&amp;redirect=1)
