Mid Travel+Q2 Summary+MNoving22 v2 - list formation nested list

--- a/_posts/2022-07-02-Moving22.md
+++ b/_posts/2022-07-02-Moving22.md
@@ -19,22 +19,22 @@ categories: 生活
 其实搬家最重要的就是需要记得所有全部需要做的事情的 List，这里总结下我的，基本都是自己确认过有效且有用的。
 
 1. 美国移民局
-  a. OPT
-    1. Service Portal
-  b. AR-11, [https://www.uscis.gov/addresschange](https://www.uscis.gov/addresschange)
-  c. Report to ISS
+  - OPT
+    - Service Portal
+  - AR-11, [https://www.uscis.gov/addresschange](https://www.uscis.gov/addresschange)
+  - Report to ISS using ISS website 
 2. Company Personal Info
-  1. PeopleProtal Updates Mail and Home addresses and below updates automatically, e.g. &quot;Address canes will e sent to benefits and Payroll within 48 hours of saving the change in PeoplePortal&quot;
-    a. Tax
-    b. 401k
-    c. Stock Options
-    d. Med Insurance
-      (1). General
-      (2). Dental
-      (3). Vision
+  - PeopleProtal Updates Mail and Home addresses and below updates automatically, e.g. &quot;Address canes will e sent to benefits and Payroll within 48 hours of saving the change in PeoplePortal&quot;
+    - Tax
+    - 401k
+    - Stock Options
+    - Med Insurance
+      - General
+      - Dental
+      - Vision
 3. Car Insurance
-  a. Address Updates
-  b. Re-quote
+  - Address Updates
+  - Re-quote
 4. DMV
 5. I-Pass
   a. Removal
