--- a/_posts/2022-07-02-Moving22.md
+++ b/_posts/2022-07-02-Moving22.md
@@ -37,20 +37,20 @@ categories: 生活
   - Re-quote
 4. DMV
 5. I-Pass
-  a. Removal
+  - Removal
 6. Texas Toll
-  a. TxTag Application
-  b. Check toll fee mail
+  - TxTag Application
+  - Check toll fee mail
 7. Your past employer will need your address to send W2 if there is any.
 8. UW-Madison Info
-  1. Student Center Profile, You will lose access to the MyUW Portal 24 months after your appointment end date, [https://kb.wisc.edu/helpdesk/page.php?id=6856&amp;redirect=1](https://kb.wisc.edu/helpdesk/page.php?id=6856&amp;redirect=1)
+  - Student Center Profile, You will lose access to the MyUW Portal 24 months after your appointment end date, [https://kb.wisc.edu/helpdesk/page.php?id=6856&amp;redirect=1](https://kb.wisc.edu/helpdesk/page.php?id=6856&amp;redirect=1)
 9. Banks Address Update, using Credit Cards to remind yourself
-  1. Citi
-  2. Amex
-  3. Chase
-  4. Discover
+  - Citi
+  - Amex
+  - Chase
+  - Discover
 10. Airline
-  1. UA
+  - UA
 11. Costco
 12. Closing utility Service e.g., electricity, water, or others
 13. Cleaning Old Apartment
