Mid Travel+Q2 Summary+MNoving22 v2 - list formation nested list 5

--- a/_posts/2022-07-02-Moving22.md
+++ b/_posts/2022-07-02-Moving22.md
@@ -32,6 +32,8 @@ categories: 生活
       - General
       - Dental
       - Vision
+    - First nested list item
+       - Second nested list item
 3. Car Insurance
   - Address Updates
   - Re-quote
