Picture url fix2

--- a/_posts/2018-06-09-lasd.markdown
+++ b/_posts/2018-06-09-lasd.markdown
@@ -112,7 +112,6 @@ categories:
 
 ![Balboa Park3](/images/CA/park3.jpeg)
 
-![Balboa Park4](/images/CA/park4.jpeg)
 
 ### 洛杉矶(Los Angeles)
 
@@ -154,7 +153,7 @@ categories:
 
 ![UCLA校园](/images/CA/UCLA.jpeg)
 
-![UCLA戏剧社表演](/images/CA/UCLA2.JPG)
+![UCLA戏剧社表演](/images/CA/UCLA2.jpeg)
 
 当然这次也去瞻仰了陶哲轩的办公室，膜拜大神。
 
