--- a/_posts/2017-07-14-dt2.markdown
+++ b/_posts/2017-07-14-dt2.markdown
@@ -64,7 +64,7 @@ categories: 美国生活
 
 不过需要提醒的是，我考的两次都没有走经典路线，所以大家还是需要切实提高自己的驾驶技术。
 
-DMV(West DMV, Madison，这个离学校近，大家去的多) 考试会有两条路线，按照从 DMV 出来的方向，一般称为右转路线称为Line1，当然也有左转路线(Line2)，比如我第一次就是左转路线。右转考的多，所以大家总结的也多，渐渐地就有了经典路线，这条路上的一切大家都总结了出来。左转路线一般不考，原因在于左转出去很多路都是麦迪逊的交通主干道，事实上很少考官让你这么开。我也不知道为什么第一次我就幸运的是Line2。第二次考试前还特地多练了几次这个。
+DMV(West DMV, Madison，这个离学校近，大家去的多) 考试会有两条路线，按照从 DMV 出来的方向，一般称为右转路线称为Line1，当然也有左转路线(Line2)，比如我第一次就是左转路线。右转考的多，所以大家总结的也多，渐渐地就有了经典路线，这条路上的一切大家都总结了出来。左转路线一般不考，原因在于左转出去很多路都是麦迪逊的交通主干道，事实上很少考官让你这么开。我也不知道为什么第一次我就幸运的是 Line2。第二次考试前还特地多练了几次这个。
 
 预约完路考之后会告诉你Line1 还是 Line2 但是这个也不是绝对，比如我第一次其实是预约的 Line1 但是考的时候可能是考官失误，没有按照 Line1 考我，是按照 Line2　考试的。所以还是需要掌握本领。
 
@@ -72,7 +72,7 @@ DMV(West DMV, Madison，这个离学校近，大家去的多) 考试会有两条
 
 ![ori](/images/RoadTest/Route1.png)
 
-这个加考路线就是大家总结出来的经典路线，也是你在学长学姐指导下的练习路线。这个路线最大的有点就是基本的交通情况都有，同时还不是特别繁忙的路线。非常适合考试。
+这个驾考路线就是大家总结出来的经典路线，也是你在学长学姐指导下的练习路线。这个路线最大的优点就是基本的交通情况都有，同时还不是特别繁忙的路线。非常适合考试。
 
 ## 我的路考路线
 
