--- a/_posts/2023-02-06-Summary2022-Plan2023.md
+++ b/_posts/2023-02-06-Summary2022-Plan2023.md
@@ -49,8 +49,10 @@ Check List:
 
 上面是成绩，下面是自己需要提高的，这里列出来提醒自己。
 
-* 
-* 
+* 拖延了 E*1*
+* Leetcode 没有坚持下去
+
+## 2023 Plan
 
 Check List:
 
@@ -64,6 +66,7 @@ One-time task
 - [ ] AFO Ingestion Migration
 - [ ] J Acc
 - [ ] W Las summer-23
+- [ ] H
 
 
 Accumlating tasks
