2022 summary and 2023 plan update 5

--- a/_posts/2023-02-07-Summary2022ANDPlan2023.md
+++ b/_posts/2023-02-07-Summary2022ANDPlan2023.md
@@ -19,7 +19,6 @@ categories: 生活 学习 工作
 	* T
 * M 2 A
 * G
-* O E
 * Submit XPCS
 
 
@@ -49,7 +48,7 @@ Check List:
 
 上面是成绩，下面是自己需要提高的，这里列出来提醒自己。
 
-* 拖延了 E*1*
+* 拖延了 E?1?
 * Leetcode 没有坚持下去
 
 ## 2023 Plan
@@ -58,7 +57,7 @@ Check List:
 
 One-time task
 
-- [ ] Finish E*1* by 2023-02-15
+- [ ] Finish E?1? by 2023-02-15
 - [ ] Tax Return before 2023-04-18
 - [ ] TX Plate before 2023-05-29
 - [ ] Teeth Cleaning 02-22-23
