fix img url & reduce img size

--- a/_posts/2023-02-14-TXDL.md
+++ b/_posts/2023-02-14-TXDL.md
@@ -36,11 +36,11 @@ categories: 生活
 
 去了之后那号，其实发现去了也是拿号，所以早点去也是可以的。
 
-![Travis County Tax Office](/images/PHX/IMG_1669.JPG)
+![Travis County Tax Office](/images/TXDL/IMG_1669.JPG)
 
-![Travis County Tax Office1](/images/PHX/IMG_1673.JPG)
+![Travis County Tax Office1](/images/TXDL/IMG_1673.JPG)
 
-![Travis County Tax Office2](/images/PHX/IMG_1671.JPG)
+![Travis County Tax Office2](/images/TXDL/IMG_1671.JPG)
 
 ## 驾照
 
