--- a/_posts/2023-02-14-TXDL.md
+++ b/_posts/2023-02-14-TXDL.md
@@ -40,7 +40,7 @@ categories: 生活
 
 ![Travis County Tax Office1](/images/TXDL/IMG_1673.JPG)
 
-![Travis County Tax Office2](/images/TXDL/IMG_1671.JPG)
+![Travis County Tax Office2](/images/TXDL/IMG_1671.PNG)
 
 ## 驾照
 
