--- a/_posts/2023-06-26-LV.md
+++ b/_posts/2023-06-26-LV.md
@@ -123,29 +123,29 @@ categories: 生活
 
 ![O Show 0](/images/LasVegas/OShow0.jpg)
 
-![O Show 1](/images/LasVegas/OShow0.jpg)
+![O Show 1](/images/LasVegas/OShow1.jpg)
 
-![O Show 2](/images/LasVegas/OShow0.jpg)
+![O Show 2](/images/LasVegas/OShow2.jpg)
 
-![O Show 3](/images/LasVegas/OShow0.jpg)
+![O Show 3](/images/LasVegas/OShow3.jpg)
 
-![O Show 4](/images/LasVegas/OShow0.jpg)
+![O Show 4](/images/LasVegas/OShow4.jpg)
 
-![O Show 5](/images/LasVegas/OShow0.jpg)
+![O Show 5](/images/LasVegas/OShow5.jpg)
 
-![O Show 6](/images/LasVegas/OShow0.jpg)
+![O Show 6](/images/LasVegas/OShow6.jpg)
 
-![O Show 7](/images/LasVegas/OShow0.jpg)
+![O Show 7](/images/LasVegas/OShow7.jpg)
 
-![O Show 8](/images/LasVegas/OShow0.jpg)
+![O Show 8](/images/LasVegas/OShow8.jpg)
 
-![O Show 9](/images/LasVegas/OShow0.jpg)
+![O Show 9](/images/LasVegas/OShow9.jpg)
 
-![O Show 10](/images/LasVegas/OShow0.jpg)
+![O Show 10](/images/LasVegas/OShow10.jpg)
 
-![O Show 11](/images/LasVegas/OShow0.jpg)
+![O Show 11](/images/LasVegas/OShow11.jpg)
 
-![O Show 12](/images/LasVegas/OShow0.jpg)
+![O Show 12](/images/LasVegas/OShow12.jpg)
 
 
 # 阿尔伯克基
