--- a/_posts/2018-06-09-lasd.markdown
+++ b/_posts/2018-06-09-lasd.markdown
@@ -48,7 +48,7 @@ categories:
 
 说起来圣地亚哥，第一次听说还是在小学的课本上。印象很深刻的一篇课文，圣地亚哥的老人要去买橘子的故事。在写这篇文章的时候我特地去查了原文，发现原文叫《苦柚》，93年人教版教材，其实那是南美智利的地方，
 
-> s您要带到很远的地方去吗？”
+> 您要带到很远的地方去吗？”
 
 > “是的，我住在圣地亚哥，你学过地理吧，智利，在南美洲，太平洋彼岸，离这儿有一万多里呢。”
 
@@ -66,13 +66,15 @@ categories:
 
 ![USS Midway 1](/images/CA/USS1.jpeg)
 
-![USS Midway 2](/images/CA/USS11.jpeg)
+![USS Midway 2](/images/CA/USS10.jpeg)
 
 ![USS Midway 3](/images/CA/USS2.jpeg)
 
 其实如果只是从一个侧面看，并不能体会到航母的巨大，但是如果上了船，从甲板看还是非常壮观的。
 
 ![USS Midway 甲板](/images/CA/USS9.jpeg)
+
+![USS Midway 甲板 2](/images/CA/USS5.jpeg)
 
 说起来，中途岛号和辽宁号的吨位非常接近，都是常规动力 6 万吨排水量的中型航母。这次参观航母还是非常有收获的，比如航母上各种装备展览，航母内部舱室都是非常值得参观的景点。
 
@@ -131,7 +133,7 @@ categories:
 
 ![传说中的 Lady M](/images/CA/M.JPG)
 
-不得不说地是，洛杉矶有美国最正宗的海底捞，据说也是唯一的海底捞店，
+不得不说地是，洛杉矶有美国最正宗的海底捞，
 
 ![海底捞](/images/CA/haidilao.jpeg)
 
@@ -161,6 +163,6 @@ categories:
 
 ### 后记
 
-说一个小事，这次在洛杉矶街头看到了国内的小黄车，但是管理实在是差，流落街头，散乱堆放。说起来真是其兴也勃焉，其亡也忽焉。
+说一个小事，这次在洛杉矶街头看到了国内的小黄车，但是管理实在是差，流落街头，散乱堆放。说起来真是其兴也勃焉，其亡也忽。
 
 ![小黄车](/images/CA/yellow.jpeg)
