--- a/_posts/2023-02-07-Summary2022ANDPlan2023.md
+++ b/_posts/2023-02-07-Summary2022ANDPlan2023.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "2022总结&2023计划"
+title: "2022 总结 and 2023 计划"
 date: 2023-02-07 15:54
 comments: true
 categories: 生活 学习 工作
