mid year summary 2023 video up

--- a/_posts/2023-09-06-MidYear2023.md
+++ b/_posts/2023-09-06-MidYear2023.md
@@ -66,6 +66,8 @@ Major tasks:
 - [  ] O1
 - [  ] Write 2 good Designs, G or LLM
 - [  ] Give Brown Bag Speech
+- [  ] LLM Reading Group 
+- [  ] LLM & AI Video up
 
 
 Accumlating tasks:
