mid year summary 2023 video up2

--- a/_posts/2023-09-06-MidYear2023.md
+++ b/_posts/2023-09-06-MidYear2023.md
@@ -47,6 +47,7 @@ Accumlating tasks
 * AFO Ingestion Migration 花了太多时间，必须加速解决
 * Leetcode 中断
 * 没有注意号积累自己的工作，导致在做 mid year review 时候缺少 points but I did more than I can recall. This is bad，need to record in doc.
+* 读论文很多，但是没有总结成文或者视频。这样理解不深刻，也不利于传播和提高自己。
 
 ## L5 注意点
 
