--- a/_posts/2023-09-06-MidYear2023.md
+++ b/_posts/2023-09-06-MidYear2023.md
@@ -71,7 +71,7 @@ Major tasks:
 - [  ] LLM & AI Video up
 
 
-Accumlating tasks:
+Accumulating tasks:
 
 - [  ] Weight -- > 100 by 09-15
 - [  ] Weight -- > 90 by 10-01
