--- a/_posts/2017-07-14-dt2.markdown
+++ b/_posts/2017-07-14-dt2.markdown
@@ -8,9 +8,8 @@ categories: 美国生活
 # 起因
 
 
-| ---------------------------------------------------------------------  |
-| **_提醒大家，这个已经过时了，DMV West 都搬迁了。大家不要按图索骥，刻舟求剑。_**   | 
-| ---------------------------------------------------------------------  | 
+**_提醒大家，这个已经过时了，DMV West 都搬迁了。大家不要按图索骥，刻舟求剑。_** 
+
 
 今天终于通过了美国的驾照考试，虽然考了两次，但是收获也很多，这里把两次考试总结下，希望对后来人有用。
 
