--- a/_posts/2023-12-02-mergeMP4.md
+++ b/_posts/2023-12-02-mergeMP4.md
@@ -23,10 +23,10 @@ for f in *.mp4;	do echo file \'$f\' >> fileList.txt; done;
 `fileList.txt`的内容差不多是
 
 ```
-file 'A.MP4'
-file 'B.MP4'
-file 'C.MP4'
-file 'D.MP4'
+file 'A.mp4'
+file 'B.mp4'
+file 'C.mp4'
+file 'D.mp4'
 ```
 
 然后用 `ffmpeg` 合并 MP4 文件
