--- a/_posts/2024-01-15-2023Summary.md
+++ b/_posts/2024-01-15-2023Summary.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "2023年总结"
+title: "2023年总结 AND 2024 规划"
 date: 2024-01-15 20:54
 comments: true
 categories: 生活 工作
@@ -65,6 +65,7 @@ Major tasks:
 - [  ] bb?
 - [  ] SFH
 - [  ] H*B?
+- [  ] Learning FastAI Courses for AS
 
 
 Accumulating tasks:
