--- a/_posts/2017-02-24-madison.markdown
+++ b/_posts/2017-02-24-madison.markdown
@@ -19,7 +19,7 @@ categories: USA
 
 ## 历史
 
-提到麦迪逊就不能不说五大湖区。五大湖区是世界著名的淡水水系，在北美更是横贯美加边界，利用人工运河和自然水系更是东接东接大西洋，南联密西西比河。这样的水系在工业时代无疑是最好的重工业基地，原料可以运进来，产品可以运出去，通过横贯美国的太平洋铁路，五大湖区更是在美国东西海岸的中间。突然想起来这个地理位置说实话就是北京在中国的地位，如果北京不是政治中心绝对是最佳的工业基地。
+提到麦迪逊就不能不说五大湖区。五大湖区是世界著名的淡水水系，在北美更是横贯美加边界，利用人工运河和自然水系更是东接大西洋，南联密西西比河。这样的水系在工业时代无疑是最好的重工业基地，原料可以运进来，产品可以运出去，通过横贯美国的太平洋铁路，五大湖区更是在美国东西海岸的中间。突然想起来这个地理位置说实话就是北京在中国的地位，如果北京不是政治中心绝对是最佳的工业基地。
 
 下图就是五大湖区的地理位置，我标注了几个重要的路线。虽然地理决定论太过夸张，但是在一定程度上非常好的解释角度。当然这是一种理论解释，你很难证明和证伪，但是确实用来解释事情的原委非常方便。
 
