--- a/_posts/2017-06-21-phd.markdown
+++ b/_posts/2017-06-21-phd.markdown
@@ -36,7 +36,7 @@ categories: 学习
 
 # 学术路的现状
 
-首先需要，强调不同专业是很不一样的。单单就最终成为教授的难易程度，就业越好的专业，找教职的难度越低。
+首先需要强调，不同专业是很不一样的。单单就最终成为教授的难易程度，就业越好的专业，找教职的难度越低。
 
 怎么定义难易程度？不能单单看最后学生成为教授的比例，这样比，计算机系其实和物理、化学差不多，不过中间的过程就完全不同了。计算机很多人是主动放弃追求学术，进入工业界，这样最后的成为教授的比例虽低，但是过程并不辛酸；物理、化学，是因为找不到教职很多人不得不放弃学术，仓促就业，个中辛酸苦泪不足为外人道，不得已的情况下，最后成为教授的比例也低。当然也有比例高的，比如商学院的 PhD　那真是万里挑一，因为人家是照着最后的教授岗位招人的。大多数情况下，只招收硕士生。
 
@@ -48,11 +48,11 @@ categories: 学习
 
 ## 供求关系
 
-其实任何行业的就业，都是由供求关系决定的。
+任何行业的就业都是由供求关系决定的。
 
 现在基础学科的现状就是，对于新教授的需求基本稳定且远远小于毕业生人数。
 
-现在成为基础学科的教授，可以说都是杀出一条血路。从概率上说，只有 5% 的新入学 PhD　会成为教授。同时这个数据还要再乘上一个学校系数，好学校概率更大，以政治学教授为例　[SUPERPOWERS: THE AMERICAN ACADEMIC ELITE](http://gppreview.com/2012/12/03/superpowers-the-american-academic-elite/)。
+现在成为基础学科的教授，可以说都是杀出一条血路。从概率上说，只有 5% 的新入学 PhD 会成为教授。同时这个数据还要再乘上一个学校系数，好学校概率更大，以政治学教授为例　[SUPERPOWERS: THE AMERICAN ACADEMIC ELITE](http://gppreview.com/2012/12/03/superpowers-the-american-academic-elite/)。
 
 至于 5% 这个概率是我从身边的经历和下面这篇报道中得到的，看生命科学和自然科学那部分，到了2011 年只有 10%，还要注意的是，这个统计是刚刚毕业的时候的数据，再算上晋升过程中的折损，这个概率其实还是挺高的，比如博士后做到一半不做了，或者续不上合同回国了(身边的例子)，最后 5% 真的还算多了。
 
