--- a/404.md
+++ b/404.md
@@ -3,6 +3,7 @@ layout: page
 title: 404 - Page not found
 permalink: /404.html
 ---
+Sorry, you may find this site via a old link, please check this update link to my blog, [桑弧蓬矢射四方 iphyer's Blog Website](https://iphyer.github.io/)
 
 Sorry, we can't find that page that you're looking for. You can try again by going [back to the homepage]({{ site.baseurl }}/).
 
