new home + Santa Fe

--- a/_posts/2023-02-14-TXDL.md
+++ b/_posts/2023-02-14-TXDL.md
@@ -16,13 +16,13 @@ categories: 生活
 
 我这次是从外州转入德州，所以是既要更新车牌也要更新驾照。
 
-最后，提醒下，DMV 和 德州 Tax office 都很慢，提前预约，经常网上预约系统你想要的 Time slot 都慢了，这个时候每天早上早起刷一刷，经常有前一天退了预约的人空出来的 Time Slot。
+最后，提醒下，DMV 和 德州 Tax office 都很慢，提前预约，经常网上预约系统你想要的 Time slot 都满了，这个时候每天早上早起刷一刷，经常有前一天退了预约的人空出来的 Time Slot。
 
 具体的流程是，你需要先办理车牌，这个是由于你在办理驾照的时候需要提供德州注册的车辆牌照。当然你要是只办理驾照，可以跳过车牌注册。
 
 参考这个帖子，[How to Apply for a Texas Driver License](https://www.dps.texas.gov/section/driver-license/how-apply-texas-driver-license)
 
-> Evidence of Texas Vehicle Registration* for each vehicle you own. Registration must be current. Visit Texas DMV vehicle registration for more information (New Residents who are surrendering an out-of-state driver license only)
+> Evidence of Texas Vehicle Registration for each vehicle you own. Registration must be current. Visit Texas DMV vehicle registration for more information (New Residents who are surrendering an out-of-state driver license only)
 
 ## 车牌
 
@@ -32,9 +32,9 @@ categories: 生活
 
 不过，有一个车辆强制检查必须在去之前完成，推荐下 Sticker Shop，专门做这个，便宜，快捷。当然别的只要通过认证的店都行。大家可以咨询下朋友，同事，同学。
 
-然后就可以带齐材料去 Tax office，当然你的保险也需要符合德州规定。具体的在[New to Texas](https://tax-office.traviscountytx.gov/vehicles/new-texas)都有详细描述。
+然后就可以带齐材料去 Tax office，当然你的保险也需要符合德州规定。具体的在 [New to Texas](https://tax-office.traviscountytx.gov/vehicles/new-texas) 都有详细描述。
 
-去了之后那号，其实发现去了也是拿号，所以早点去也是可以的。
+去了之后发现去了也是拿号，所以早点去也是可以的，不一定要网上预约 slot。
 
 ![Travis County Tax Office](/images/TXDL/IMG_1669.JPG)
 
