--- a/_posts/2024-07-13-Moving2LH.md
+++ b/_posts/2024-07-13-Moving2LH.md
@@ -52,10 +52,12 @@ categories: 生活
 9. Costco
 10. Set up new utility and autopay
 11. USPS Forward Request 
+
 12. Closing utility Service 
   - electricity
   - water
   - internet
+  - rental insurance
   - others
 13. Returning Keys
 
