--- a/_posts/2024-07-28-SantaFe.md
+++ b/_posts/2024-07-28-SantaFe.md
@@ -12,7 +12,7 @@ categories: 生活
 
 ## Santa Fe 简介
 
-直接用 ChatGPT 生成一段夏威夷-欧胡岛的简介， 我个人看了下还是不错的。
+直接用 ChatGPT 生成一段 Santa Fe 的简介， 我个人看了下还是不错的。
 
 圣达菲（Santa Fe）是美国新墨西哥州的首府，也是该州第四大城市。它成立于1610年，是美国最古老的首府城市之一。圣达菲位于洛矶山脉的南部，海拔约2134米，享有四季分明的气候，冬季积雪，夏季温暖干燥。
 
