--- a/_posts/2024-07-13-Moving2LH.md
+++ b/_posts/2024-07-13-Moving2LH.md
@@ -52,13 +52,13 @@ categories: 生活
 9. Costco
 10. Set up new utility and autopay
 11. USPS Forward Request 
-
 12. Closing utility Service 
-  - electricity
-  - water
-  - internet
-  - rental insurance
-  - others
+  - internet：return Spectrum equipment 
+  - water: Apartment takes care
+  - electricity: City of Austin Utilities: Stop service request
+  - rental insurance: eRenterplan Website
+  - etc.
+
 13. Returning Keys
 
 
