--- a/_posts/2024-01-15-2023SummaryAND2024Plan.md
+++ b/_posts/2024-01-15-2023SummaryAND2024Plan.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "2023年总结 AND 2024 规划"
+title: "2023总结 并 2024规划"
 date: 2024-01-15 20:54
 comments: true
 categories: 生活 工作
