--- a/_posts/2025-01-15-2024SummaryAND2025Plan.md
+++ b/_posts/2025-01-15-2024SummaryAND2025Plan.md
@@ -8,6 +8,8 @@ categories: 生活 工作
 
 2024 年就这么匆匆的过去，心中感慨万千，这里总结下自己的 2024，规划下 2025 的计划。
 
+这里先写下这个总结，后面我再补充调整。
+
 不停写博客的好处就是，如果你去翻看去年的这个总结，其实开头是一样的，只是改了年份，年年岁岁花相似，岁岁年年人不同。
 
 <!--more-->
@@ -47,14 +49,9 @@ categories: 生活 工作
 
 ## 总结
 
-* 健身和体重控制没注意，需要 focus
-	* 控制饮食 
-	* 运动
+* 健身和体重控制
 * Leetcode 中断
 * 读论文很多，但是没有总结成文或者视频。这样理解不深刻，也不利于传播和提高自己。
-* 缺少 good design
-* 缺少 Cross-team collaboration
-
 
 ## 新的 2025 计划
 
@@ -62,5 +59,19 @@ categories: 生活 工作
 
 Major tasks:
 
+- [ WIP ] Write 2 good Designs
+- [ WIP ] L5
+- [ WIP ] bb
+
+- [  ] Give Brown Bag Speech
+- [  ] LLM & AI Video up
+- [  ] Learning FastAI Courses for AS
+- [  ] Apply LLM to current project, sync with Edwin/Wtao/Alg/JamesG 2~3 hours per week
 
 Accumulating tasks:
+
+- [  ] Wegiths: target: 200
+- [  ] LeetCode: 613. target 1000
+
+- [  ] Reviewer: 137
+- [  ] CR # 121
