remove FastAI from goals of 2025

--- a/_posts/2024-12-31-2024SummaryAND2025Plan.md
+++ b/_posts/2024-12-31-2024SummaryAND2025Plan.md
@@ -27,13 +27,13 @@ categories: 生活 工作
 - [ NS ] H*B
 - [ Leading Discission WIP ] LLM Reading Group 
 - [ X ] LLM Hachathon Organizer 
-- [  ] Give Brown Bag Speech
-- [  ] LLM & AI Video up
 - [ WIP ] Write 2 good Designs
-- [  ] Learning FastAI Courses for AS
-- [  ] L5
 - [ WIP ] bb?
 - [ X ] SFH
+- [  ] L5
+- [  ] Give Brown Bag Speech
+- [  ] LLM & AI Video up
+- [  ] Learning FastAI Courses for AS
 - [  ] Apply LLM to current project, sync with Edwin/Wtao/Alg/JamesG 2~3 hours per week
 
 
@@ -62,18 +62,13 @@ Major tasks:
 - [ WIP ] Write 2 good Designs
 - [ WIP ] L5
 - [ WIP ] bb
-
-
 - [  ] Give Brown Bag Speech
 - [  ] LLM & AI Video up
-- [  ] Learning FastAI Courses for AS
 - [  ] Apply LLM to current project, sync with Edwin/Wtao/Alg/JamesG 2~3 hours per week
 
 Accumulating tasks:
 
 - [  ] Wegiths: target: 200
-- [  ] LeetCode: 613. target 1000
-
-
+- [  ] LeetCode: 613 target 1000
 - [  ] Reviewer: 137
 - [  ] CR # 121
