2025 plan update adding AS

--- a/_posts/2025-08-20-2025PlanUpdate.md
+++ b/_posts/2025-08-20-2025PlanUpdate.md
@@ -10,7 +10,7 @@ categories: 生活 工作
 
 <!--more-->
 
-## 2025 计划
+## New 2025 计划
 
 这里重新列举下自己的2024计划。
 
@@ -21,6 +21,10 @@ Major tasks:
 - [ Done ] bb
 - [  ] Give GenAI Demo Speech
 - [  ] Apply LLM to current project, sync with Edwin/Wtao/Alg/JamesG 2~3 hours per week
+- [  ] Work on 2 GenAI / ML paper
+	- [ ] Gait Speed
+	- [ ] GenAI for Grocery
+- [  ] Keep improving L5 SDE and figure out L6 AS
 
 Accumulating tasks:
 
