--- a/_posts/2017-06-21-phd.markdown
+++ b/_posts/2017-06-21-phd.markdown
@@ -91,7 +91,9 @@ categories: 学习
 
 学术工作的收益曲线(用收入衡量)和个人能力大致是这样的:
 
-![收益和能力曲线](/images/PHD/require.jpg)
+![收益和能力曲线](/images/PHD/salary_ability_jobs.png)
+
+我想给出的结论是，一般工作，能力越强收入越高成正比；学术工作是有一定门槛的，再没到门槛之前，比如得到教授职位，你的能力再增长，但是你的收入基本不变。
 　
 本质上，这是因为学术工作是一种精英主义的领域，你不成为这个领域的前列，你的生活会非常惨烈。
 
