work summary 5 understand next 3 steps, slow down & do things right, sync more

--- a/_posts/2016-04-15-cstask.markdown
+++ b/_posts/2016-04-15-cstask.markdown
@@ -27,7 +27,7 @@ categories: 计算机
 
 # 目标
 
-离开目标谈所谓的学习攻略或者计划是没有意义的。举个粒子，如果你的目标是前段工程师，你花很多时间研究 GPU 计算这是赤果果的南辕北辙。
+离开目标谈所谓的学习攻略或者计划是没有意义的。举个粒子，如果你的目标是前端工程师，你花很多时间研究 GPU 计算这是赤果果的南辕北辙。
 
 当然你要是说这是你个人的兴趣什么的我还是非常喜欢的。
 
