parent to us checklist for flight update1

--- a/_posts/2026-01-15-Parent2US.md
+++ b/_posts/2026-01-15-Parent2US.md
@@ -6,7 +6,7 @@ comments: true
 categories: 生活
 ---
 
-父母最近来美国,已经有 5 年没见过爸妈了。五年时间,不知不觉间父母的鬓角又添了几缕白发，妈妈的也弯得厉害。
+父母最近来美国,已经有 5 年没见过爸妈了。五年时间,不知不觉间父母的鬓角又添了几缕白发，妈妈的腰也弯得厉害。
 
 <Revised by Claude AI>
 
